# deep-learning-lib

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PRD.md  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  dl.sln
examples/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  train_mlp.cpp  train_mlp.vcxproj  train_mlp.vcxproj.filters
include/: PRD.md  copy.ps1
include/dl/: autograd.hpp  dl.hpp  fwd.hpp  tensor.hpp  utils.hpp
include/dl/detail/: tensor_error.hpp  tensor_impl.hpp
include/dl/nn/: linear.hpp  mlp.hpp
include/dl/ops/: activations.hpp  basic_ops.hpp  broadcast.hpp  loss.hpp  matrix_ops.hpp  node_factory.hpp  reduction_ops.hpp  slice_ops.hpp
include/dl/optim/: optimizer.hpp
include/dl/utils/: index_utils.hpp
src/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  dl.vcxproj  dl.vcxproj.filters  tensor.cpp
src/dl.dir/Release/: dl.lib.recipe
src/dl.dir/Release/dl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  dl.lastbuildstate
tests/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  doctest.h  linear_tests.cpp  linear_tests.vcxproj  linear_tests.vcxproj.filters  matrix_ops_tests.cpp  matrix_ops_tests.vcxproj  matrix_ops_tests.vcxproj.filters  ops_tests.cpp  ops_tests.vcxproj  ops_tests.vcxproj.filters  tensor_tests.cpp  tensor_tests.vcxproj  tensor_tests.vcxproj.filters
tests/linear_tests.dir/Release/linear_tests.tlog/: CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  linear_tests.lastbuildstate
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  (+3 more)
